0000-00-00  0.0.2  (Rasmus Andersson <rasmus@notion.se>)

 * [NEW] Writing to files now support asynchronous or synchronous (blocking the
   UI) operation. To use synchronous saving of local files, set the defaults key
   "KFileURLHandler/write/async" to "NO". Writing is now based on URL handlers.

 * [FIXED] Writing files no longer reset file mode. Ticket 16

 * [NEW] Changelog accessible through kod:changelog

 * [FIXED] Saving a file with a different type causes syntax type to be
   reconsidered. Ticket 21

 * [FIXED] Aborting super user authorization during creation of "kod helper"
   symlink no longer yields an error dialog. Ticket 33

 * [CHANGED] No longer using Google Breakpad for crash reporting, but instead
   collecting system crash reports at program re-launch. This also means we no
   longer strip the product.

 * [NEW] Kod is now open source and licensed under a permissive MIT style
   license with minor modifications by Jonathan Rhyne.
   See <http://blog.robrhyne.com/post/1043407467/selling-open-source>

 * [NEW] Document "edited" (or "dirty") state is now shown both using the OS X
   standard "dot in the window close button" as well as making the tab icon
   darker when there are unsaved changes. Ticket 18

 * [NEW] Clicking a link (elements of type "url") opens the clicked link.


2010-12-23  0.0.1  (Rasmus Andersson <rasmus@notion.se>)

 * [NEW] First release