@@ -1,7 +1,7 @@
 {
   CFBundleExecutable = "${EXECUTABLE_NAME}";
-  CFBundleShortVersionString = "0.0.1";
-  CFBundleVersion = "0.0.1";
+  CFBundleShortVersionString = "0.0.2";
+  CFBundleVersion = "0.0.2";
   CFBundleIconFile = "kod.icns";
   CFBundleIdentifier = "se.hunch.kod";
   CFBundleInfoDictionaryVersion = "6.0";
@@ -21,6 +21,7 @@
 
   /* Sparkle (other settings are hard-coded) */
   SUPublicDSAKeyFile = "dsa_pub.pem";
+  SUShowReleaseNotes = NO;
 
   BreakpadProduct = "${EXECUTABLE_NAME}";
   BreakpadProductDisplay = "${PRODUCT_NAME}";
